	Remove requirement for XF86Rush protocol headers, which we don't even
	use in the core server.

	* configure.ac:
	* xkb/Makefile.am:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/dixmods/Makefile.am:
	Build libxkbstubs.la to stub XKB DDX functions (e.g. VT switches), and
	build libxorggxkb.la from within the Xorg DDX to replace the previous
	xf86VT.o, et al, hacks.

2005-08-19  Søren Sandmann  <sandmann@redhat.com>

	* fb/Makefile.am (libfbmmx_la_CFLAGS): Move fbmmx to a convenience
	library since the mmx flags may be harmful when applied to non-mmx
	code.

2005-08-17  Søren Sandmann  <sandmann@redhat.com>

	* Xext/Makefile.am: Conditionally compile in xprint.c

	* Makefile.am, configure.ac: Add Xprint

2005-08-16  Søren Sandmann  <sandmann@redhat.com>

	* hw/xfree86/dixmods/Makefile.am: Add ft and type1 modules.

2005-08-15  Søren Sandmann  <sandmann@redhat.com>

	* hw/xfree86/dixmods/extmod/Makefile.am (libextmod_la_LIBADD):
	Link this module with libXext.la.

Mon Aug 15 14:56:57 2005  Søren Sandmann  <sandmann@redhat.com>

	* hw/xfree86/dixmods/Makefile.am (libdixmods_la_SOURCES): Remove
	the xkb* files.

	* hw/xfree86/Makefile.am (Xorg_LDADD): Add xkbVT.o and friends as
	the last things on the link line so they will override the symbols
	in libxkb.a.  Add a comment on how this situation might not be
	considered ideal.

2005-08-08  Søren Sandmann  <sandmann@redhat.com>

	* include/xorg-config.h.in: #undef PIXPRIV here.

2005-08-07  Keith Packard  <keithp@keithp.com>

	* include/dix-config.h.in:
	Re-add _XOPEN_SOURCE as it's needed *sometimes*.
	Place it in #ifndef to avoid whinging.

2005-08-07  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* GL/mesa/X/.cvsignore:
	* Xext/extmod/.cvsignore:
	* afb/.cvsignore:
	* cfb/.cvsignore:
	* cfb16/.cvsignore:
	* cfb24/.cvsignore:
	* cfb32/.cvsignore:
	* hw/dmx/.cvsignore:
	* hw/dmx/config/.cvsignore:
	* hw/vfb/.cvsignore:
	* hw/xfree86/.cvsignore:
	* hw/xfree86/common/.cvsignore:
	* hw/xfree86/dixmods/.cvsignore: