@@ -1,17 +1,17 @@
 noinst_LTLIBRARIES = libslang.la
 
 INCLUDES = -I@MESA_SOURCE@/include \
-           -I$(srcdir)/../grammar \
-           -I$(srcdir)/../../X \
-           -I$(srcdir)/../../array_cache \
-           -I$(srcdir)/../../glapi \
-           -I$(srcdir)/../../main \
-           -I$(srcdir)/../../math \
-           -I$(srcdir)/../../shader \
-           -I$(srcdir)/../../swrast \
-           -I$(srcdir)/../../swrast_setup \
-           -I$(srcdir)/../../tnl \
-           -I$(srcdir)/../..
+           -I../grammar \
+           -I../../X \
+           -I../../array_cache \
+           -I../../glapi \
+           -I../../main \
+           -I../../math \
+           -I../../shader \
+           -I../../swrast \
+           -I../../swrast_setup \
+           -I../../tnl \
+           -I../..
 
 nodist_libslang_la_SOURCES = slang_assemble_assignment.c \
 		      slang_assemble.c \
