@@ -4,6 +4,8 @@ libdri_la_CFLAGS = -I$(top_srcdir)/hw/xfree86/common \
                    -I$(top_srcdir)/hw/xfree86/os-support/bus \
                    -I$(top_srcdir)/GL/glx \
                    -I$(top_srcdir)/GL/include \
+                   -I$(top_builddir)/GL/include \
+		   -I@MESA_SOURCE@/include \
                    -DHAVE_XORG_CONFIG_H \
                    @DRIPROTO_CFLAGS@ \
                    @LIBDRM_CFLAGS@
